--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
     "github-markdown-css": "^4.0.0",
     "markdown-it": "^12.0.4",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-container": "^3.0.0",
     "markdown-it-deflist": "^2.1.0",
+    "markdown-it-footnote": "^3.0.2",
     "markdown-it-highlightjs": "^3.4.0",
     "markdown-it-ins": "^3.0.1",
     "markdown-it-katex": "^2.0.3",
@@ -21,10 +21,12 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
-    "mavon-editor": "^2.9.1",
+    "markdown-it-toc": "^1.1.0",
+    "mavon-editor-x": "^1.0.1",
     "md5": "^2.3.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-jsdiff": "https://github.com/YouXam/vue-jsdiff.git",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.3",
     "vuetify-loader": "^1.7.2"
